manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "test-e22f"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "test-e22f"
  template:
    metadata:
      labels:
        app: "test-e22f"
    spec:
      containers:
        - name: "test-e22f"
          image: "mutualfundrep.azurecr.io/test"
          ports:
          - containerPort: 80
