manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "test-e22f"
    labels:
        app: "test-e22f"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: mutualfund-test-e22f.6030b51ae8e8402e9482.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "test-e22f"
                servicePort: 80
